<resources>
    <string name="app_name">Hw6</string>
    <string name="kek">Kek</string>
    <string name="pictureforfun">PictureForFun</string>
    <string name="email">Email</string>
    <string name="login">Войти</string>
    <string name="password">Пароль</string>
    <string name="login_no_account">Нет аккаунта? Зарегайся!</string>
    <string name="lol">Лол</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="password2">Потверждение пароля</string>
    <string name="registration">Регистрация</string>
    <string name="login_account">Уже есть аккаунт? Войти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_msg">Напиши сюда…</string>
    <string name="str2">Просто надпись</string>
    <string name="full_name">Имя Фамилия</string>
    <string name="albums">Albums</string>
    <string name="create_post">Create Post</string>
    <string name="users">Users</string>
    <string name="Crete">Создать</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
</resources>