<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/post_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/body"/>
    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/post_btn"
        android:text="@string/Crete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"/>

</LinearLayout>