<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lol"
                android:textColor="@color/Green3"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_baseline_email_24"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/ic_baseline_person_24"
                    android:hint="@string/firstname"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/lastname"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/ic_twotone_lock_24"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/ic_twotone_lock_open_24"
                    android:hint="@string/password2"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    tools:ignore="TextFields" />

                <Button
                    android:id="@+id/reg_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/registration"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textView_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="28dp"
                    android:alpha=".87"
                    android:gravity="center"
                    android:text="@string/login_account"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>