<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hw2.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kek"
                android:textColor="@color/Green3"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_weight="3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="32dp"
                    android:contentDescription="@string/pictureforfun"
                    android:src="@drawable/pictureforfun"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/simple_gmail_com"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="TextFields" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/login"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textView_no_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="28dp"
                    android:alpha=".87"
                    android:gravity="center"
                    android:text="@string/login_no_account"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>