<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="22dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher_round" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str2"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/divider" />

    <LinearLayout
        android:background="@drawable/input_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingHorizontal="15dp">

        <EditText
            android:id="@+id/msg_et"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="100"
            android:background="@android:color/transparent"
            android:hint="@string/input_msg"
            />

        <ImageView
            android:id="@+id/send_msg_iv"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_union" />
    </LinearLayout>

</LinearLayout>